deploy/kube/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traidano
spec:
  selector:
    matchLabels:
      app: traidano
  template:
    metadata:
      labels:
        app: traidano
    spec:
      imagePullSecrets:
        - name: ghrc-secret
      containers:
        - name: traidano
          image: ghcr.io/treansai/traidano:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 9494
---
kind: Service
apiVersion: v1
metadata:
  name: traidano-svc
spec:
  selector:
    app: traidano
  type: LoadBalancer
  ports:
    - name: traidano-port
      port: 9494
      targetPort: 9494
